--- a/violetplugin-classdiagram/pom.xml
+++ b/violetplugin-classdiagram/pom.xml
@@ -19,5 +19,10 @@
             <artifactId>violet-framework</artifactId>
             <version>${applicationVersion}</version>
         </dependency>
+        <dependency>
+            <groupId>org.jsoup</groupId>
+            <artifactId>jsoup</artifactId>
+            <version>1.11.2</version>
+        </dependency>
     </dependencies>
 </project>
